--- a/assets/style.scss
+++ b/assets/style.scss
@@ -18,8 +18,10 @@
 $unit: 8px;
 $black: #000;
 $duration: 0.2s;
-$font_size: 18px;
 $line_height: $unit * 3;
+$font_body: 18px;
+$font_caption: 14px;
+$col_width: 100vw / 6;
 
 /* Typographic defaults -------------------------------- */
 * {
@@ -29,7 +31,7 @@ $line_height: $unit * 3;
 }
 body {
   font-family: tilt-neon;
-  font-size: 18px;
+  font-size: $font_body;
   line-height: $line_height;
 }
 a {
@@ -51,8 +53,23 @@ h2 {
 p {
   margin: $line_height 0;
 }
+.neon {
+  font-family: tilt-neon;
+}
+.prism {
+  font-family: tilt-prism;
+}
+.warp {
+  font-family: tilt-warp;
+}
 
 /* Layouts --------------------------------------------- */
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 nav {
   width: 100%;
   position: fixed;
@@ -104,4 +121,130 @@ nav {
       width: $unit * 3;
     }
   }
+}
+section {
+  border-bottom: 1px solid;
+}
+section.hero {
+  text-align: center;
+  font-size: 45vw;
+  line-height: 1em;
+  cursor: pointer;
+  overflow: hidden;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+      -moz-user-select: none; /* Old versions of Firefox */
+      -ms-user-select: none; /* Internet Explorer/Edge */
+          user-select: none; /* Non-prefixed version, currently
+                                supported by Chrome, Opera and Firefox */
+  word-break: keep-all;
+  .hrot, .vrot{
+    position: absolute;
+    font-size: $font_caption;
+    line-height: $line_height;
+    margin-top: -$line_height * 1.5;
+    left: $unit * 3;
+  }
+  .vrot {
+    left: $unit * 25;
+  }
+  svg {
+    position:absolute;
+    top:0;
+    left:0;
+    pointer-events:none;
+  }
+  svg line {
+    stroke:#fff;
+    stroke-width:1;
+  }
+  svg circle {
+    fill: #fff;
+  }
+}
+
+section.scroller {
+  font-size: $unit * 27;
+  line-height:  $unit * 30;
+  overflow-y: hidden;
+  white-space: nowrap;
+  padding: 0 $unit * 3;
+}
+
+section.information {
+  background: linear-gradient(180deg, transparent calc(0% - 0.5px),$black calc(0% + 0.5px), transparent calc(0% + 1.5px));
+  background-position: 0 $col_width * 2;
+  .description {
+    float:left;
+    width: $col_width * 4;
+    min-height: $col_width * 2;
+    border-right: 1px solid;
+    padding: $unit $col_width $unit $unit*4;
+    background: #fff;
+  }
+  .highlight {
+    float:left;
+    width: $col_width * 2;
+    height: $col_width * 2;
+    background: #fff;
+    .hline {
+      position:absolute;
+      width: $col_width * 1.5;
+      height: 1px;
+      margin: $col_width $col_width * 0.25;
+      background-image: linear-gradient(90deg, $black, $black 25%, transparent 25%, transparent 100%);
+      background-size: $unit / 2 1px;
+    }
+    .vline {
+      position:absolute;
+      width: 1px;
+      height: $col_width * 1.5 ;
+      margin: $col_width * 0.25 $col_width;
+      background-image: linear-gradient(0deg, $black, $black 25%, transparent 25%, transparent 100%);
+      background-size: 1px $unit / 2;
+    }
+    .legend {
+      position: absolute;
+      width: $unit * 6;
+      height: $unit * 3;
+      &.hrot {
+        left: $col_width * 5;
+        margin: $unit 0 0 (- $unit * 3);
+      }
+      &.hmin {
+        left: $col_width * 4;
+        margin: $unit 0 0 $unit;
+      }
+      &.hmax {
+        left: $col_width * 6;
+        margin: $unit 0 0 (- $unit * 7);
+        text-align: right;
+      }
+      &.vmax {
+        left: $col_width * 4;
+        margin: calc(33.33vw - 32px) 0 0 $unit;
+      }
+      &.vrot {
+        left: $col_width * 4;
+        margin: calc(16.67vw + 24px) 0 0 $unit;
+        transform: rotate(-90deg);
+        transform-origin: 0% 0%;
+      }
+    }
+    .glyph {
+      text-align: center;
+      font-size: $col_width * 2;
+      line-height: $col_width * 2;
+    }
+  }
+}
+
+div.separator {
+  //https://dev.to/clairecodes/how-to-create-a-polka-dot-background-with-css-23m0
+  height: $unit * 12;
+  border-bottom: 1px solid;
+  background-image: radial-gradient($black 12.5%, transparent 12.5%), radial-gradient($black 12.5%, transparent 12.5%);
+  background-position: $unit/4 $unit/4, $unit * 1.5 / 2 + $unit/4 $unit * 1.5 / 2 + $unit/4;
+  background-size: $unit * 1.5 $unit * 1.5;
 }
