--- a/prototypes/header/style.css
+++ b/prototypes/header/style.css
@@ -14,6 +14,7 @@ body {
   font-family: tilt-neon;
   margin:0;
   color: #fff;
+  transition: background-color 0.1s;
   /* background-color: #FF3C3C; */
 }
 .text {
@@ -34,6 +35,7 @@ body {
           user-select: none; /* Non-prefixed version, currently
                                 supported by Chrome, Opera and Firefox */
   border-bottom: 1px solid;
+  word-break: keep-all;
 }
 .char-0 {
   font-family: tilt-neon;
