--- a/assets/style.scss
+++ b/assets/style.scss
@@ -182,6 +182,9 @@ section.information {
     border-right: 1px solid;
     padding: $unit $col_width $unit $unit*4;
     background: #fff;
+    h2, p {
+      max-width: $unit * 128;
+    }
   }
   .highlight {
     float:left;
@@ -236,6 +239,87 @@ section.information {
       text-align: center;
       font-size: $col_width * 2;
       line-height: $col_width * 2;
+    }
+  }
+}
+
+section.tester {
+  .ibeam {
+    float:left;
+    width: $unit * 15;
+    border-right: 1px solid;
+    height: $unit * 30;
+    text-align: center;
+    padding-top: $unit * 4;
+  }
+  .text {
+    float:left;
+    .slider-wrapper {
+      position: absolute;
+      span {
+        font-size: $font_caption;
+        margin-right: $unit;
+      }
+      &.hrot {
+        margin: $unit 0 0 $unit * 2;
+        .slider {
+          width: $unit * 20;
+        }
+      }
+      &.vrot {
+        margin: $unit * 28 0 0 $unit;
+        transform: rotate(-90deg);
+        transform-origin: 0% 0%;
+        .slider {
+          width: $unit * 17;
+        }
+      }
+      .slider {
+        position: absolute;
+        height: $unit * 2;
+        margin: $unit / 2 0;
+        background: transparent;
+        //https://dev.to/_phzn/styling-range-sliders-with-css-4lgl
+        -webkit-appearance: none;
+        &:focus{
+          outline: none;
+        }
+        &::-webkit-slider-runnable-track, &::-webkit-slider-runnable-track {
+          background: $black;
+          height: 1px;
+        }
+        &::-webkit-slider-thumb {
+          -webkit-appearance: none;
+          height: $unit * 2;
+          width: $unit * 2;
+          background: #fff;
+          margin-top: - ($unit - 1);
+          border: 1px solid;
+          border-radius: 50%;
+        }
+        &::-moz-range-thumb {
+          height: $unit * 2;
+          width: $unit * 2;
+          background: #fff;
+          margin-top: - ($unit + 1);
+          border: 1px solid;
+          border-radius: 50%;
+        }
+      }
+    }
+    .string {
+      border: 0;
+      // background-color: yellow;
+      overflow: scroll hidden;
+      width: calc(100vw - 120px);
+      height: $unit * 30;
+      font-size: $unit * 27;
+      line-height: $unit * 30;
+      white-space: nowrap;
+      padding: 0 0 0 $unit * 5;
+      &:focus {
+        outline: none;
+      }
     }
   }
 }
