--- a/assets/style.css
+++ b/assets/style.css
@@ -189,6 +189,7 @@ nav .secondary .camera {
 
 section {
   border-bottom: 1px solid;
+  background: #fff;
 }
 
 section.hero {
@@ -363,8 +364,8 @@ section.tester .text .slider-wrapper .slider::-webkit-slider-runnable-track, sec
 }
 section.tester .text .slider-wrapper .slider::-webkit-slider-thumb {
   -webkit-appearance: none;
-  height: 16px;
-  width: 16px;
+  height: 15px;
+  width: 15px;
   background: #fff;
   margin-top: -7px;
   border: 1px solid;
@@ -390,6 +391,52 @@ section.tester .text .string {
 }
 section.tester .text .string:focus {
   outline: none;
+}
+
+section.footer .text {
+  float: left;
+  width: 50vw;
+  padding: 0 0 24px 32px;
+}
+section.footer .text h2 {
+  font-size: 36px;
+  line-height: 42px;
+  text-transform: none;
+  margin: 42px 0;
+}
+section.footer .credit {
+  float: right;
+  width: 33.3333333333vw;
+}
+section.footer .credit .google {
+  float: left;
+  width: 16.6666666667vw;
+  padding: 48px 0;
+}
+section.footer .credit .detail {
+  float: left;
+  width: 16.6666666667vw;
+}
+section.footer .credit .detail ul {
+  padding: 48px 0;
+}
+section.footer .credit .detail ul li {
+  margin: 6px 0;
+}
+section.footer .credit .detail .people {
+  font-size: 14px;
+  line-height: 18px;
+  margin-top: 0;
+}
+section.footer .credit .fineprint {
+  font-size: 12px;
+  line-height: 14px;
+  float: left;
+  width: 33.3333333333vw;
+  padding: 48px 32px 32px 0;
+}
+section.footer .credit .fineprint p {
+  margin-top: 0;
 }
 
 div.separator {
