--- a/assets/style.css
+++ b/assets/style.css
@@ -245,6 +245,200 @@ section.scroller {
   padding: 0 24px;
 }
 
+section.signs div {
+  float: left;
+}
+section.signs .content {
+  clear: both;
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+section.signs .content .inner {
+  display: table-cell;
+  width: 100%;
+  vertical-align: middle;
+  text-align: center;
+}
+section.signs .col-half {
+  width: 50vw;
+}
+section.signs .col-quarter {
+  width: 25vw;
+}
+section.signs .nha-hang-tan-the-gioi {
+  width: 50vw;
+  height: 40vw;
+  border-bottom: 1px solid;
+  border-right: 1px solid;
+}
+section.signs .new-york-boston {
+  width: 25vw;
+  height: 20vw;
+  border-right: 1px solid;
+}
+section.signs .twenty-four-hrs {
+  width: 25vw;
+  height: 10vw;
+  border-right: 1px solid;
+  border-bottom: 1px solid;
+}
+section.signs .back-rub {
+  width: 25vw;
+  height: 10vw;
+  border-right: 1px solid;
+}
+section.signs .prosperity {
+  position: absolute;
+  width: 33.3333333333vw;
+  height: 13.3333333333vw;
+  border-right: 1px solid;
+  border-bottom: 1px solid;
+  background: #fff;
+}
+section.signs .col-hopkee {
+  width: 10.5vw;
+  border-right: 1px solid;
+  height: 60vw;
+}
+section.signs .hopkee {
+  width: 10.5vw;
+  height: 46.6666666667vw;
+  margin-top: 13.3333333333vw;
+}
+section.signs .col-hok-shan {
+  width: 39.5vw;
+}
+section.signs .col-hok-shan-top {
+  width: 39.5vw;
+  height: 30vw;
+  border-bottom: 1px solid;
+}
+section.signs .col-key {
+  width: 22.8333333333vw;
+  height: 30vw;
+}
+section.signs .key {
+  width: 22.8333333333vw;
+  margin-top: 13.3333333333vw;
+  height: 16.6666666667vw;
+  border-right: 1px solid;
+}
+section.signs .four-choices {
+  width: 16.6666666667vw;
+  height: 30vw;
+}
+section.signs .hok-shan-building {
+  width: 39.5vw;
+  height: 30vw;
+}
+section.signs .grand-central {
+  width: 75vw;
+  height: 18.3333333333vw;
+  border-right: 1px solid;
+  border-bottom: 1px solid;
+}
+section.signs .thirty {
+  width: 25vw;
+  height: 18.3333333333vw;
+  border-bottom: 1px solid;
+}
+section.signs .pershing {
+  width: 100vw;
+  height: 8.3333333333vw;
+  border-bottom: 1px solid;
+}
+section.signs .time {
+  width: 25vw;
+  height: 10vw;
+  border-right: 1px solid;
+  border-bottom: 1px solid;
+}
+section.signs .trk {
+  width: 25vw;
+  height: 10vw;
+  border-right: 1px solid;
+  border-bottom: 1px solid;
+}
+section.signs .bowery-savings {
+  width: 50vw;
+  height: 33.3333333333vw;
+  border-right: 1px solid;
+}
+section.signs .nypl {
+  width: 50vw;
+  height: 20vw;
+  border-bottom: 1px solid;
+}
+section.signs .restroom {
+  width: 50vw;
+  height: 10vw;
+  border-bottom: 1px solid;
+}
+section.signs .fourty-second {
+  width: 25vw;
+  height: 13.3333333333vw;
+  border-right: 1px solid;
+}
+section.signs .east {
+  width: 25vw;
+  height: 13.3333333333vw;
+}
+section.signs .dont-block {
+  width: 50vw;
+  height: 40vw;
+  border-right: 1px solid;
+  border-bottom: 1px solid;
+}
+section.signs .holland-tunnel {
+  width: 50vw;
+  height: 18.3333333333vw;
+  border-right: 1px solid;
+  border-bottom: 1px solid;
+}
+section.signs .parking-tax {
+  width: 28.8333333333vw;
+  height: 15vw;
+  border-right: 1px solid;
+}
+section.signs .metered-parking {
+  width: 21.1666666667vw;
+  height: 15vw;
+  border-right: 1px solid;
+}
+section.signs .col-max-veh {
+  width: 16.6666666667vw;
+}
+section.signs .bus {
+  width: 16.6666666667vw;
+  height: 10vw;
+  border-right: 1px solid;
+  border-bottom: 1px solid;
+}
+section.signs .fraction {
+  width: 16.6666666667vw;
+  height: 16.1666666667vw;
+  border-right: 1px solid;
+  border-bottom: 1px solid;
+}
+section.signs .max-veh {
+  width: 16.6666666667vw;
+  height: 27.1666666667vw;
+  border-right: 1px solid;
+}
+section.signs .col-early-bird {
+  width: 33.3333333333vw;
+}
+section.signs .thru-traffic {
+  width: 33.3333333333vw;
+  height: 25vw;
+  border-bottom: 1px solid;
+}
+section.signs .early-bird {
+  width: 33.3333333333vw;
+  height: 48.3333333333vw;
+}
+
 section.information {
   background: linear-gradient(180deg, transparent calc(0% - 0.5px), #000 calc(0% + 0.5px), transparent calc(0% + 1.5px));
   background-position: 0 33.3333333333vw;
@@ -385,7 +579,6 @@ section.tester .text .string {
   width: calc(100vw - 120px);
   height: 240px;
   font-size: 216px;
-  line-height: 240px;
   white-space: nowrap;
   padding: 0 0 0 40px;
 }
@@ -411,7 +604,7 @@ section.footer .credit {
 section.footer .credit .google {
   float: left;
   width: 16.6666666667vw;
-  padding: 48px 0;
+  padding: 56px 0;
 }
 section.footer .credit .detail {
   float: left;
@@ -436,7 +629,7 @@ section.footer .credit .fineprint {
   padding: 48px 32px 32px 0;
 }
 section.footer .credit .fineprint p {
-  margin-top: 0;
+  margin: 0 0 14px 0;
 }
 
 div.separator {
