--- a/assets/style.scss
+++ b/assets/style.scss
@@ -179,6 +179,208 @@ section.scroller {
   padding: 0 $unit * 3;
 }
 
+section.signs {
+  div {
+    float:left;
+  }
+  .content {
+    clear: both;
+    display: table;
+    width: 100%;
+    height: 100%;
+    .inner {
+      display: table-cell;
+      width: 100%;
+      vertical-align: middle;
+      text-align: center;
+    }
+  }
+  .col-half {
+    width: $col_width * 3;
+  }
+  .col-quarter {
+    width: $col_width * 1.5;
+  }
+  // neon -------------------------------------------------
+  .nha-hang-tan-the-gioi {
+    width: $col_width * 3;
+    height: $col_width * 2.4;
+    border-bottom: 1px solid;
+    border-right: 1px solid;
+  }
+  .new-york-boston {
+    width: $col_width * 1.5;
+    height: $col_width * 1.2;
+    border-right: 1px solid;
+  }
+  .twenty-four-hrs {
+    width: $col_width * 1.5;
+    height: $col_width * 0.6;
+    border-right: 1px solid;
+    border-bottom: 1px solid;
+  }
+  .back-rub {
+    width: $col_width * 1.5;
+    height: $col_width * 0.6;
+    border-right: 1px solid;
+  }
+  .prosperity {
+    position:absolute;
+    width: $col_width * 2;
+    // width: calc((100vw / 6 * 2) - 1px);
+    height: $col_width * 0.8;
+    border-right: 1px solid;
+    border-bottom: 1px solid;
+    background: #fff;
+  }
+  .col-hopkee {
+    width: $col_width * 0.63;
+    border-right: 1px solid;
+    height: $col_width * 3.6;
+  }
+  .hopkee {
+    width: $col_width * 0.63;
+    height: $col-width * 2.8;
+    margin-top: $col_width * 0.8;
+  }
+  .col-hok-shan {
+    width: $col-width * 2.37;
+  }
+  .col-hok-shan-top {
+    width: $col-width * 2.37;
+    height: $col-width * 1.8;
+    border-bottom: 1px solid;
+  }
+  .col-key {
+    width: $col_width * 1.37;
+    height: $col_width * 1.8;
+  }
+  .key {
+    width: $col_width * 1.37;
+    margin-top: $col_width * 0.8;
+    height: $col_width;
+    border-right: 1px solid;
+  }
+  .four-choices {
+    width: $col_width;
+    height: $col_width * 1.8;
+  }
+  .hok-shan-building {
+    width: $col-width * 2.37;
+    height: $col-width * 1.8;
+  }
+  // prism ------------------------------------------------
+  .grand-central {
+    width: $col_width * 4.5;
+    height: $col_width * 1.1;
+    border-right: 1px solid;
+    border-bottom: 1px solid;
+  }
+  .thirty {
+    width: $col_width * 1.5;
+    height: $col_width * 1.1;
+    border-bottom: 1px solid;
+  }
+  .pershing {
+    width: $col_width * 6;
+    height: $col_width * 0.5;
+    border-bottom: 1px solid;
+  }
+  .time {
+    width: $col_width * 1.5;
+    height: $col_width * 0.6;
+    border-right: 1px solid;
+    border-bottom: 1px solid;
+  }
+  .trk {
+    width: $col_width * 1.5;
+    height: $col_width * 0.6;
+    border-right: 1px solid;
+    border-bottom: 1px solid;
+  }
+  .bowery-savings {
+    width: $col_width * 3;
+    height: $col_width * 2;
+    border-right: 1px solid;
+  }
+  .nypl {
+    width: $col_width * 3;
+    height: $col_width * 1.2;
+    border-bottom: 1px solid;
+  }
+  .restroom {
+    width: $col_width * 3;
+    height: $col_width * 0.6;
+    border-bottom: 1px solid;
+  }
+  .fourty-second {
+    width: $col_width * 1.5;
+    height: $col_width * 0.8;
+    border-right: 1px solid;
+  }
+  .east {
+    width: $col_width * 1.5;
+    height: $col_width * 0.8;
+  }
+  // warp ------------------------------------------------
+  .dont-block {
+    width: $col_width * 3;
+    height: $col_width * 2.4;
+    border-right: 1px solid;
+    border-bottom: 1px solid;
+  }
+  .holland-tunnel {
+    width: $col_width * 3;
+    height: $col_width * 1.1;
+    border-right: 1px solid;
+    border-bottom: 1px solid;
+  }
+  .parking-tax {
+    width: $col_width * 1.73;
+    height: $col_width * 0.9;
+    border-right: 1px solid;
+  }
+  .metered-parking {
+    width: $col_width * 1.27;
+    height: $col_width * 0.9;
+    border-right: 1px solid;
+  }
+  
+  .col-max-veh {
+    width: $col_width * 1;
+  }
+  .bus {
+    width: $col_width * 1;
+    height: $col_width * 0.6;
+    border-right: 1px solid;
+    border-bottom: 1px solid;
+  }
+  .fraction {
+    width: $col_width * 1;
+    height: $col_width * 0.97;
+    border-right: 1px solid;
+    border-bottom: 1px solid;
+  }
+  .max-veh {
+    width: $col_width * 1;
+    height: $col_width * 1.63;
+    border-right: 1px solid;
+  }
+  .col-early-bird {
+    width: $col_width * 2;
+  }
+  .thru-traffic {
+    width: $col_width * 2;
+    height: $col_width * 1.5;
+    border-bottom: 1px solid;
+  }
+  .early-bird {
+    width: $col_width * 2;
+    height: $col_width * 2.9;
+  }
+}
+
+
 section.information {
   background: linear-gradient(180deg, transparent calc(0% - 0.5px),$black calc(0% + 0.5px), transparent calc(0% + 1.5px));
   background-position: 0 $col_width * 2;
@@ -321,7 +523,6 @@ section.tester {
       width: calc(100vw - 120px);
       height: $unit * 30;
       font-size: $unit * 27;
-      line-height: $unit * 30;
       white-space: nowrap;
       padding: 0 0 0 $unit * 5;
       &:focus {
@@ -349,7 +550,7 @@ section.footer {
     .google {
       float: left;
       width: $col_width;
-      padding: $unit * 6 0;
+      padding: $unit * 7 0;
     }
     .detail {
       float: left;
@@ -373,7 +574,7 @@ section.footer {
       width: $col_width * 2;
       padding: $unit * 6 $unit * 4 $unit * 4 0;
       p {
-        margin-top:0;
+        margin: 0 0 14px 0;
       }
     }
   }
