--- a/assets/style.css
+++ b/assets/style.css
@@ -137,6 +137,7 @@ p {
 nav {
   width: 100%;
   position: fixed;
+  z-index: 9999;
   height: 48px;
   border-bottom: 1px solid;
   background: #fff;
@@ -248,17 +249,50 @@ section.scroller {
 section.signs div {
   float: left;
 }
-section.signs .content {
-  clear: both;
-  display: table;
-  width: 100%;
-  height: 100%;
+section.signs .sign {
+  position: relative;
+  overflow: hidden;
 }
-section.signs .content .inner {
-  display: table-cell;
-  width: 100%;
-  vertical-align: middle;
+section.signs .sign .inner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  font-size: 3.33vw;
+}
+section.signs .sign .inner div {
+  float: none;
   text-align: center;
+}
+section.signs .sign .inner p {
+  margin: 0;
+  text-align: center;
+  line-height: 105%;
+}
+section.signs .sign .inner p.xxs {
+  font-size: 2.5vw;
+}
+section.signs .sign .inner p.xs {
+  font-size: 3.33vw;
+}
+section.signs .sign .inner p.s {
+  font-size: 4.44vw;
+}
+section.signs .sign .inner p.m {
+  font-size: 5vw;
+}
+section.signs .sign .inner p.l {
+  font-size: 6.67vw;
+}
+section.signs .sign .inner p.xl {
+  font-size: 10vw;
+}
+section.signs .sign .inner p.xxl {
+  font-size: 11.11vw;
+}
+section.signs .sign .inner p.xxxl {
+  font-size: 13vw;
 }
 section.signs .col-half {
   width: 50vw;
@@ -272,6 +306,16 @@ section.signs .nha-hang-tan-the-gioi {
   border-bottom: 1px solid;
   border-right: 1px solid;
 }
+section.signs .nha-hang-tan-the-gioi .oval {
+  margin: 0.5em 0 0.7em 0;
+}
+section.signs .nha-hang-tan-the-gioi .oval p {
+  display: inline-block;
+  border: 0.075em solid;
+  border-radius: 100%;
+  margin: 0 auto;
+  padding: 0.1em 0.3em;
+}
 section.signs .new-york-boston {
   width: 25vw;
   height: 20vw;
@@ -283,10 +327,23 @@ section.signs .twenty-four-hrs {
   border-right: 1px solid;
   border-bottom: 1px solid;
 }
+section.signs .twenty-four-hrs p {
+  border: 0.075em solid;
+  border-radius: 0.2em;
+  padding: 0.1em 0.2em;
+}
 section.signs .back-rub {
   width: 25vw;
   height: 10vw;
   border-right: 1px solid;
+}
+section.signs .back-rub p {
+  display: inline-block;
+}
+section.signs .back-rub p.heart {
+  position: relative;
+  top: -0.5em;
+  padding: 0 0.125em;
 }
 section.signs .prosperity {
   position: absolute;
@@ -305,6 +362,13 @@ section.signs .hopkee {
   width: 10.5vw;
   height: 46.6666666667vw;
   margin-top: 13.3333333333vw;
+}
+section.signs .hopkee p.l {
+  writing-mode: vertical-rl;
+  text-orientation: upright;
+  line-height: 10.55vw;
+  letter-spacing: -0.3em;
+  margin-top: -0.2em;
 }
 section.signs .col-hok-shan {
   width: 39.5vw;
@@ -328,9 +392,24 @@ section.signs .four-choices {
   width: 16.6666666667vw;
   height: 30vw;
 }
+section.signs .four-choices p.dollar {
+  margin: 0 0 0.125em 0;
+}
 section.signs .hok-shan-building {
   width: 39.5vw;
   height: 30vw;
+}
+section.signs .hok-shan-building .circle {
+  margin: 0.3em 0;
+}
+section.signs .hok-shan-building .circle p {
+  display: inline-block;
+  border: 0.08em solid;
+  border-radius: 100%;
+  width: 1.6em;
+  height: 1.6em;
+  line-height: calc(1.6em - 0.08em * 2);
+  margin: 0 0.125em;
 }
 section.signs .grand-central {
   width: 75vw;
@@ -338,15 +417,27 @@ section.signs .grand-central {
   border-right: 1px solid;
   border-bottom: 1px solid;
 }
+section.signs .grand-central p {
+  letter-spacing: 0.15em;
+}
 section.signs .thirty {
   width: 25vw;
   height: 18.3333333333vw;
   border-bottom: 1px solid;
 }
+section.signs .thirty p.track {
+  letter-spacing: 0.05em;
+}
+section.signs .thirty p.num {
+  line-height: 0.9em;
+}
 section.signs .pershing {
   width: 100vw;
   height: 8.3333333333vw;
   border-bottom: 1px solid;
+}
+section.signs .pershing p {
+  letter-spacing: 0.2em;
 }
 section.signs .time {
   width: 25vw;
@@ -354,21 +445,33 @@ section.signs .time {
   border-right: 1px solid;
   border-bottom: 1px solid;
 }
+section.signs .time p {
+  letter-spacing: 0.15em;
+}
 section.signs .trk {
   width: 25vw;
   height: 10vw;
   border-right: 1px solid;
   border-bottom: 1px solid;
 }
+section.signs .trk p {
+  letter-spacing: 0.15em;
+}
 section.signs .bowery-savings {
   width: 50vw;
   height: 33.3333333333vw;
   border-right: 1px solid;
 }
+section.signs .bowery-savings p.save {
+  line-height: 0.9em;
+}
 section.signs .nypl {
   width: 50vw;
   height: 20vw;
   border-bottom: 1px solid;
+}
+section.signs .nypl p.text {
+  line-height: 0.95em;
 }
 section.signs .restroom {
   width: 50vw;
@@ -390,21 +493,40 @@ section.signs .dont-block {
   border-right: 1px solid;
   border-bottom: 1px solid;
 }
+section.signs .dont-block .inner p {
+  line-height: 1em;
+}
 section.signs .holland-tunnel {
   width: 50vw;
   height: 18.3333333333vw;
   border-right: 1px solid;
   border-bottom: 1px solid;
 }
+section.signs .holland-tunnel .inner p {
+  line-height: 1em;
+  letter-spacing: 0.2em;
+}
 section.signs .parking-tax {
   width: 28.8333333333vw;
   height: 15vw;
   border-right: 1px solid;
 }
+section.signs .parking-tax .inner p {
+  line-height: 1em;
+}
 section.signs .metered-parking {
   width: 21.1666666667vw;
   height: 15vw;
   border-right: 1px solid;
+}
+section.signs .metered-parking p {
+  display: inline-block;
+}
+section.signs .metered-parking p.text {
+  text-align: left;
+  line-height: 0.95em;
+  position: relative;
+  top: -0.2em;
 }
 section.signs .col-max-veh {
   width: 16.6666666667vw;
@@ -426,6 +548,17 @@ section.signs .max-veh {
   height: 27.1666666667vw;
   border-right: 1px solid;
 }
+section.signs .max-veh p.max {
+  line-height: 0.9em;
+  margin-bottom: 0.2em;
+}
+section.signs .max-veh .size {
+  border: 0.1em solid;
+  border-radius: 0.2em;
+}
+section.signs .max-veh .size p {
+  padding: 0 0.1em;
+}
 section.signs .col-early-bird {
   width: 33.3333333333vw;
 }
@@ -434,9 +567,24 @@ section.signs .thru-traffic {
   height: 25vw;
   border-bottom: 1px solid;
 }
+section.signs .thru-traffic .inner p {
+  line-height: 1em;
+}
+section.signs .thru-traffic .only {
+  margin: 0.3em;
+}
+section.signs .thru-traffic .only p {
+  display: inline-block;
+  background: #000;
+  color: #fff;
+  padding: 0.1em 0.3em;
+}
 section.signs .early-bird {
   width: 33.3333333333vw;
   height: 48.3333333333vw;
+}
+section.signs .early-bird .inner p {
+  line-height: 1em;
 }
 
 section.information {
