--- a/assets/style.scss
+++ b/assets/style.scss
@@ -79,6 +79,7 @@ p {
 nav {
   width: 100%;
   position: fixed;
+  z-index: 9999;
   height: $unit * 6;
   border-bottom: 1px solid;
   background: #fff;
@@ -178,21 +179,37 @@ section.scroller {
   white-space: nowrap;
   padding: 0 $unit * 3;
 }
-
 section.signs {
   div {
     float:left;
   }
-  .content {
-    clear: both;
-    display: table;
-    width: 100%;
-    height: 100%;
+  .sign {
+    position: relative;
+    overflow: hidden;
     .inner {
-      display: table-cell;
-      width: 100%;
-      vertical-align: middle;
-      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-right: -50%;
+      transform: translate(-50%, -50%);
+      font-size: 3.33vw; //set the default for spacing
+      div {
+        float: none;
+        text-align: center;
+      }
+      p {
+        margin:0;
+        text-align: center;;
+        line-height: 105%;
+        &.xxs { font-size: 2.5vw; }  // 36px
+        &.xs { font-size: 3.33vw; }  // 48px
+        &.s { font-size: 4.44vw; }  // 64px
+        &.m { font-size: 5vw; }     // 72px
+        &.l { font-size: 6.67vw; }  // 96px
+        &.xl { font-size: 10vw; }   // 144px
+        &.xxl { font-size: 11.11vw; } // 160px
+        &.xxxl { font-size: 13vw; } // 180px
+      }
     }
   }
   .col-half {
@@ -207,6 +224,16 @@ section.signs {
     height: $col_width * 2.4;
     border-bottom: 1px solid;
     border-right: 1px solid;
+    .oval {
+      margin: 0.5em 0 0.7em 0;
+      p {
+        display: inline-block;
+        border: 0.075em solid;
+        border-radius: 100%;
+        margin: 0 auto;
+        padding: 0.1em 0.3em;
+      }
+    }
   }
   .new-york-boston {
     width: $col_width * 1.5;
@@ -218,11 +245,24 @@ section.signs {
     height: $col_width * 0.6;
     border-right: 1px solid;
     border-bottom: 1px solid;
+    p {
+      border: 0.075em solid;
+      border-radius: 0.2em;
+      padding: 0.1em 0.2em;
+    }
   }
   .back-rub {
     width: $col_width * 1.5;
     height: $col_width * 0.6;
     border-right: 1px solid;
+    p {
+      display: inline-block;
+      &.heart {
+        position: relative;
+        top: -0.5em;
+        padding: 0 0.125em;
+      }
+    }
   }
   .prosperity {
     position:absolute;
@@ -242,6 +282,13 @@ section.signs {
     width: $col_width * 0.63;
     height: $col-width * 2.8;
     margin-top: $col_width * 0.8;
+    p.l {
+      writing-mode: vertical-rl;
+      text-orientation: upright;
+      line-height: 10.55vw;
+      letter-spacing: -0.3em;
+      margin-top: -0.2em;
+    }
   }
   .col-hok-shan {
     width: $col-width * 2.37;
@@ -264,10 +311,25 @@ section.signs {
   .four-choices {
     width: $col_width;
     height: $col_width * 1.8;
+    p.dollar {
+      margin: 0 0 0.125em 0;
+    }
   }
   .hok-shan-building {
     width: $col-width * 2.37;
     height: $col-width * 1.8;
+    .circle {
+      margin: 0.3em 0;
+      p {
+        display: inline-block;
+        border: 0.08em solid;
+        border-radius: 100%;
+        width: 1.6em;
+        height: 1.6em;
+        line-height: calc(1.6em - 0.08em * 2);
+        margin: 0 0.125em;
+      }
+    }
   }
   // prism ------------------------------------------------
   .grand-central {
@@ -275,38 +337,62 @@ section.signs {
     height: $col_width * 1.1;
     border-right: 1px solid;
     border-bottom: 1px solid;
+    p {
+      letter-spacing: 0.15em;
+    }
   }
   .thirty {
     width: $col_width * 1.5;
     height: $col_width * 1.1;
     border-bottom: 1px solid;
+    p.track {
+      letter-spacing: 0.05em;
+    }
+    p.num {
+      line-height: 0.9em;
+    }
   }
   .pershing {
     width: $col_width * 6;
     height: $col_width * 0.5;
     border-bottom: 1px solid;
+    p {
+      letter-spacing: 0.2em;
+    }
   }
   .time {
     width: $col_width * 1.5;
     height: $col_width * 0.6;
     border-right: 1px solid;
     border-bottom: 1px solid;
+    p {
+      letter-spacing: 0.15em;
+    }
   }
   .trk {
     width: $col_width * 1.5;
     height: $col_width * 0.6;
     border-right: 1px solid;
     border-bottom: 1px solid;
+    p {
+      letter-spacing: 0.15em;
+    }
   }
   .bowery-savings {
     width: $col_width * 3;
     height: $col_width * 2;
     border-right: 1px solid;
+    p.save {
+      line-height: 0.9em;
+    }
   }
   .nypl {
     width: $col_width * 3;
     height: $col_width * 1.2;
     border-bottom: 1px solid;
+    p.text {
+      line-height: 0.95em;
+    }
   }
   .restroom {
     width: $col_width * 3;
@@ -328,22 +414,41 @@ section.signs {
     height: $col_width * 2.4;
     border-right: 1px solid;
     border-bottom: 1px solid;
+    .inner p {
+      line-height: 1em;
+    }
   }
   .holland-tunnel {
     width: $col_width * 3;
     height: $col_width * 1.1;
     border-right: 1px solid;
     border-bottom: 1px solid;
+    .inner p {
+      line-height: 1em;
+      letter-spacing: 0.2em;
+    }
   }
   .parking-tax {
     width: $col_width * 1.73;
     height: $col_width * 0.9;
     border-right: 1px solid;
+    .inner p {
+      line-height: 1em;
+    }
   }
   .metered-parking {
     width: $col_width * 1.27;
     height: $col_width * 0.9;
     border-right: 1px solid;
+    p {
+      display: inline-block;
+    }
+    p.text {
+      text-align: left;
+      line-height: 0.95em;
+      position:relative;
+      top: -0.2em;
+    }
   }
   
   .col-max-veh {
@@ -365,6 +470,18 @@ section.signs {
     width: $col_width * 1;
     height: $col_width * 1.63;
     border-right: 1px solid;
+    
+    p.max {
+      line-height: 0.9em;
+      margin-bottom: 0.2em;
+    }
+    .size {
+      border: 0.1em solid;
+      border-radius: 0.2em;
+      p {
+        padding: 0 0.1em;
+      }
+    }
   }
   .col-early-bird {
     width: $col_width * 2;
@@ -373,10 +490,25 @@ section.signs {
     width: $col_width * 2;
     height: $col_width * 1.5;
     border-bottom: 1px solid;
+    .inner p {
+      line-height: 1em;
+    }
+    .only {
+      margin: 0.3em;
+      p {
+        display: inline-block;
+        background: $black;
+        color: #fff;
+        padding: 0.1em 0.3em;
+      }
+    }
   }
   .early-bird {
     width: $col_width * 2;
     height: $col_width * 2.9;
+    .inner p {
+      line-height: 1em;
+    }
   }
 }
 
