--- a/assets/style.scss
+++ b/assets/style.scss
@@ -198,19 +198,19 @@ section.signs {
         float: none;
         text-align: center;
       }
-      p {
-        margin:0;
-        text-align: center;;
-        line-height: 105%;
-        &.xxs { font-size: 2.5vw; }  // 36px
-        &.xs { font-size: 3.33vw; }  // 48px
-        &.s { font-size: 4.44vw; }  // 64px
-        &.m { font-size: 5vw; }     // 72px
-        &.l { font-size: 6.67vw; }  // 96px
-        &.xl { font-size: 10vw; }   // 144px
-        &.xxl { font-size: 11.11vw; } // 160px
-        &.xxxl { font-size: 13vw; } // 180px
-      }
+    }
+    p {
+      margin:0;
+      text-align: center;;
+      line-height: 105%;
+      &.xxs { font-size: 2.5vw; }  // 36px
+      &.xs { font-size: 3.33vw; }  // 48px
+      &.s { font-size: 4.44vw; }  // 64px
+      &.m { font-size: 5vw; }     // 72px
+      &.l { font-size: 6.67vw; }  // 96px
+      &.xl { font-size: 10vw; }   // 144px
+      &.xxl { font-size: 11.11vw; } // 160px
+      &.xxxl { font-size: 13vw; } // 180px
     }
   }
   .col-half {
@@ -385,24 +385,125 @@ section.signs {
     width: $col_width * 3;
     height: $col_width * 2;
     border-right: 1px solid;
-    .inner {
-      p {
-        line-height: 0.9em;
-        position: absolute;
-        width: 29vw;
-        margin: 2em 0 0 -14.5vw;
-        left: 50%;
-      }
-      svg {
-        // display: block;
-        margin: 0 auto;
-        width: $col_width * 3;
-        height: $col_width * 2;
-        fill: transparent;
-        // position: absolute;
-        text {
-          fill: $black;
+    .arc {
+      p.bowery {
+        span {
+          position: absolute;
+          // top: 50%;
+          // left: 50%;
+          // margin-right: -50%;
+          // transform: translate(-50%, -50%);
+          display: flex;
+          align-items: center;
+          line-height: 100%;
+          transform-origin: 0% 0%;
         }
+        .arc-1 {
+          left: 6.94%; //left: 50px; 
+          top: 71.97%;
+          transform: rotate(-86.24deg);
+        }
+        .arc-2 {
+          left: 7.34%;
+          top: 63.28%;
+          transform: rotate(-77.67deg);
+        }
+        .arc-3 {
+          left: 8.95%;
+          top: 52.93%;
+          transform: rotate(-69deg);
+        }
+        .arc-4 {
+          left: 12.2%;
+          top: 41.51%;
+          transform: rotate(-57.74deg);
+        }
+        .arc-5 {
+          left: 15.51%;
+          top: 33.77%;
+          transform: rotate(-49.16deg);
+        }
+        .arc-6 {
+          left: 20.08%;
+          top: 25.83%;
+          transform: rotate(-38.54deg);
+        }
+        .arc-7 {
+          left: 27.17%;
+          top: 17.73%;
+          transform: rotate(-28.67deg);
+        }
+        .arc-8 {
+          left: 32.26%;
+          top: 13.63%;
+          transform: rotate(-20.78deg);
+        }
+        .arc-9 {
+          left: 37.84%;
+          top: 10.51%;
+          transform: rotate(-12.55deg);
+        }
+        .arc-10 {
+          left: 46.4%;
+          top: 8.16%;
+          transform: rotate(-1.55deg);
+        }
+        .arc-11 {
+          left: 51.99%;
+          top: 7.98%;
+          transform: rotate(6.18deg);
+        }
+        .arc-12 {
+          left: 57.94%;
+          top: 8.99%;
+          transform: rotate(14.51deg);
+        }
+        .arc-13 {
+          left: 64.15%;
+          top: 11.59%;
+          transform: rotate(21.21deg);
+        }
+        .arc-14 {
+          left: 67.54%;
+          top: 13.46%;
+          transform: rotate(28.25deg);
+        }
+        .arc-15 {
+          left: 73.75%;
+          top: 18.58%;
+          transform: rotate(37.71deg);
+        }
+        .arc-16 {
+          left: 79.19%;
+          top: 25.07%;
+          transform: rotate(46.04deg);
+        }
+        .arc-17 {
+          left: 84.64%;
+          top: 34.17%;
+          transform: rotate(57.11deg);
+        }
+        .arc-18 {
+          left: 87.99%;
+          top: 42.02%;
+          transform: rotate(66deg);
+        }
+        .arc-19 {
+          left: 90.8%;
+          top: 51.74%;
+          transform: rotate(75.49deg);
+        }
+        .arc-20 {
+          left: 92.5%;
+          top: 62.11%;
+          transform: rotate(84.7deg);
+        }
+      }
+    }
+    .inner {
+      p.save {
+        line-height: 0.9em;
+        margin-top: 1.4em;
       }
     }
   }
